@@ -7,7 +7,7 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
 import java.util.Arrays;
-import java.util.List;
+import java.util.Collections;
 
 @Configuration
 public class CorsConfig {
@@ -16,15 +16,15 @@ public class CorsConfig {
     public CorsFilter corsFilter() {
         CorsConfiguration config = new CorsConfiguration();
         
-        // Menggunakan allowedOriginPatterns untuk mendukung semua origin dengan credentials
-        config.setAllowedOriginPatterns(List.of("*"));
-        config.setAllowCredentials(true); // Enable credentials untuk JWT
+        // Untuk development dan testing - izinkan semua origin
+        config.setAllowCredentials(false); // Set ke false karena menggunakan * untuk origin
+        config.setAllowedOrigins(Collections.singletonList("*")); // Menggunakan allowedOrigins dengan *
         config.setAllowedHeaders(Arrays.asList("*"));
         config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH", "HEAD"));
         config.setMaxAge(3600L); // cache preflight response
         
         // Tambahkan exposed headers untuk response
-        config.setExposedHeaders(Arrays.asList("Authorization", "Cache-Control", "Content-Type", "Access-Control-Allow-Origin"));
+        config.setExposedHeaders(Arrays.asList("Authorization", "Cache-Control", "Content-Type"));
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
